[gd_scene load_steps=3 format=2] 

[ext_resource path="res://Placeholder images/bar.png" type="Texture" id=1]
[ext_resource path="res://Create pets.gd" type="Script" id=2]

[node name="Ratio Mix" type="Sprite"]

position = Vector2( 563, 265 )
texture = ExtResource( 1 )
region_rect = Rect2( 3, 3, 3, 3 )
script = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="ColorRect2" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -39.0
margin_top = -183.0
margin_right = 39.0
margin_bottom = -140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.127625, 0.781189, 0.796875, 1 )
_sections_unfolded = [ "Rect" ]

[node name="ColorRect" type="ColorRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -39.0
margin_top = -86.0
margin_right = 39.0
margin_bottom = -43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Rect" ]

[node name="ColorRect3" type="ColorRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -39.0
margin_right = 39.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.132295, 0.628906, 0.0761566, 1 )
_sections_unfolded = [ "Rect" ]

[node name="ColorRect4" type="ColorRect" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -39.0
margin_top = 67.0
margin_right = 39.0
margin_bottom = 110.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../ColorRect")
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.804688, 0.0251465, 0.0251465, 1 )
_sections_unfolded = [ "Focus", "Rect", "Size Flags" ]


